--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,17 @@ APP_NAME="💂 Odin"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://odin.localhost
+APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=odin
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
-QUEUE_CONNECTION=sync
-REDIS_HOST=127.0.0.1
+QUEUE_CONNECTION=redis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -21,6 +21,8 @@ MAIL_FROM_ADDRESS=no-reply@odin.dev
 MAIL_FROM_NAME="${APP_NAME}"
 
 ENFORCE_DOMAIN=true
-HORIZON_ENABLED=false
+HORIZON_ENABLED=true
 DEBUGBAR_ENABLED=false
 REGISTRATIONS_ENABLED=true
+
+BROWSERSHOT_NO_SANDBOX=true
