--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
 
+# proxy settings: needed if your app is behind a reverse proxy that provides ssl termination
+PROXY_SCHEMA= # https
+PROXY_URL= # https://odin.yourserver.com
+
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
@@ -25,4 +29,4 @@ HORIZON_ENABLED=true
 DEBUGBAR_ENABLED=false
 REGISTRATIONS_ENABLED=true
 
-BROWSERSHOT_NO_SANDBOX=true
+BROWSERSHOT_NO_SANDBOX=true # set to true if running in docker
