--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=secret
 
 QUEUE_CONNECTION=redis
 REDIS_HOST=redis
-REDIS_PASSWORD=null
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_DRIVER=mailgun
